--- a/pv-sdb1.yaml
+++ b/pv-sdb1.yaml
@@ -9,6 +9,13 @@ spec:
     storage: 100Gi
   accessModes:
     - ReadWriteOnce
-  hostPath:
-    path: "/dev/sdb1"
-
+  local:
+    path: /mnt/data1
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - my-node 
